@@ -191,7 +191,6 @@ int exec_spawn(ExecCommand *command,
                bool apply_permissions,
                bool apply_chroot,
                bool apply_tty_stdin,
-               bool confirm_spawn,
                CGroupControllerMask cgroup_mask,
                const char *cgroup_path,
                const char *runtime_prefix,
